--- a/src/model/notebooks/model_selection.ipynb
+++ b/src/model/notebooks/model_selection.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "fc70e4fb",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "84e0147c",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "2cc09b70",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "a2c51d94",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "fd2c9cba",
    "metadata": {},
    "outputs": [
@@ -126,45 +126,15 @@
      "text": [
       "\n",
       "🚀 Entraînement de : Régression Logistique...\n",
-      "Résultat pour Régression Logistique :\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        Good       0.58      0.60      0.59      3289\n",
-      "        Poor       0.78      0.68      0.73      5355\n",
-      "    Standard       0.74      0.78      0.76      9836\n",
-      "\n",
-      "    accuracy                           0.72     18480\n",
-      "   macro avg       0.70      0.69      0.69     18480\n",
-      "weighted avg       0.73      0.72      0.72     18480\n",
-      "\n",
+      "Résultat pour Régression Logistique : 0.7226\n",
       "\n",
       "🚀 Entraînement de : Random Forest...\n",
-      "Résultat pour Random Forest :\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "        Good       0.69      0.68      0.68      3289\n",
-      "        Poor       0.77      0.75      0.76      5355\n",
-      "    Standard       0.78      0.80      0.79      9836\n",
-      "\n",
-      "    accuracy                           0.76     18480\n",
-      "   macro avg       0.75      0.74      0.74     18480\n",
-      "weighted avg       0.76      0.76      0.76     18480\n",
-      "\n",
+      "Résultat pour Random Forest : 0.7622\n",
       "\n",
       "🚀 Entraînement de : Gradient Boosting...\n",
-      "Résultat pour Gradient Boosting :\n",
-      "              precision    recall  f1-score   support\n",
+      "Résultat pour Gradient Boosting : 0.7026\n",
       "\n",
-      "        Good       0.58      0.61      0.59      3289\n",
-      "        Poor       0.75      0.64      0.69      5355\n",
-      "    Standard       0.72      0.77      0.75      9836\n",
-      "\n",
-      "    accuracy                           0.70     18480\n",
-      "   macro avg       0.68      0.67      0.68     18480\n",
-      "weighted avg       0.70      0.70      0.70     18480\n",
-      "\n",
-      "\n",
-      "Best model : Random Forest avec une précision de 0.7622\n"
+      "🏆 Best model: Random Forest with accuracy 0.7622\n"
      ]
     }
    ],
@@ -177,33 +147,66 @@
     "    \"Gradient Boosting\": GradientBoostingClassifier(n_estimators=100, random_state=42)\n",
     "}\n",
     "\n",
+    "trained_pipelines = {} \n",
     "results = {}\n",
     "\n",
     "for name, model in models.items():\n",
     "    print(f\"\\n🚀 Entraînement de : {name}...\")\n",
     "    \n",
+    "    # Create the pipeline\n",
     "    clf = Pipeline(steps=[\n",
     "        ('preprocessor', preprocessor),\n",
     "        ('classifier', model)\n",
     "    ])\n",
     "    \n",
+    "    # Train\n",
     "    clf.fit(X_train, y_train)\n",
-    "    y_pred = clf.predict(X_val)\n",
     "    \n",
+    "    # Store the TRAINED pipeline in our dictionary\n",
+    "    trained_pipelines[name] = clf  \n",
+    "    \n",
+    "    # Evaluate\n",
+    "    y_pred = clf.predict(X_val)\n",
     "    acc = accuracy_score(y_val, y_pred)\n",
     "    results[name] = acc\n",
     "    \n",
-    "    print(f\"Résultat pour {name} :\")\n",
-    "    print(classification_report(y_val, y_pred))\n",
+    "    print(f\"Résultat pour {name} : {acc:.4f}\")\n",
     "\n",
-    "best_model = max(results, key=results.get)\n",
-    "print(f\"\\nBest model : {best_model} avec une précision de {results[best_model]:.4f}\")"
+    "# Find the name of the best model\n",
+    "best_model_name = max(results, key=results.get)\n",
+    "print(f\"\\n🏆 Best model: {best_model_name} with accuracy {results[best_model_name]:.4f}\")\n",
+    "\n",
+    "# Retrieve the actual model object using the name\n",
+    "best_pipeline = trained_pipelines[best_model_name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "04bf959b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Model saved locally as ../../../Backend/best_model.joblib\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "# Save locally to the root or a 'models' folder\n",
+    "filename = \"../../../Backend/best_model.joblib\"\n",
+    "joblib.dump(best_pipeline, filename)\n",
+    "\n",
+    "print(f\"✅ Model saved locally as {filename}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.13.5)",
    "language": "python",
    "name": "python3"
   },
@@ -217,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
