--- a/src/model/notebooks/model_selection.ipynb
+++ b/src/model/notebooks/model_selection.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "fc70e4fb",
    "metadata": {},
    "outputs": [],
@@ -35,12 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "84e0147c",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(r\"../../data/datasets/cleaned_train.csv\")\n",
+    "\n",
+    "cols = ['Annual_Income', 'Monthly_Inhand_Salary', 'Num_Bank_Accounts', 'Outstanding_Debt', 'Num_Credit_Card', 'Credit_History_Months']\n",
+    "df = df[cols + ['Credit_Score']]\n",
     "X = df.drop(columns=['Credit_Score'])\n",
     "y = df['Credit_Score']"
    ]
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "2cc09b70",
    "metadata": {},
    "outputs": [],
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "a2c51d94",
    "metadata": {},
    "outputs": [
@@ -87,8 +90,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Colonnes numériques (17) : ['Age', 'Annual_Income', 'Monthly_Inhand_Salary', 'Num_Bank_Accounts', 'Num_Credit_Card', 'Interest_Rate', 'Num_of_Loan', 'Delay_from_due_date', 'Num_of_Delayed_Payment', 'Changed_Credit_Limit', 'Num_Credit_Inquiries', 'Outstanding_Debt', 'Credit_Utilization_Ratio', 'Total_EMI_per_month', 'Amount_invested_monthly', 'Monthly_Balance', 'Credit_History_Months']\n",
-      "Colonnes catégorielles (6) : ['Month', 'Occupation', 'Type_of_Loan', 'Credit_Mix', 'Payment_of_Min_Amount', 'Payment_Behaviour']\n"
+      "Colonnes numériques (6) : ['Annual_Income', 'Monthly_Inhand_Salary', 'Num_Bank_Accounts', 'Outstanding_Debt', 'Num_Credit_Card', 'Credit_History_Months']\n",
+      "Colonnes catégorielles (0) : []\n"
      ]
     }
    ],
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "fd2c9cba",
    "metadata": {},
    "outputs": [
@@ -126,15 +129,15 @@
      "text": [
       "\n",
       "🚀 Entraînement de : Régression Logistique...\n",
-      "Résultat pour Régression Logistique : 0.7226\n",
+      "Résultat pour Régression Logistique : 0.5354\n",
       "\n",
       "🚀 Entraînement de : Random Forest...\n",
-      "Résultat pour Random Forest : 0.7622\n",
+      "Résultat pour Random Forest : 0.7884\n",
       "\n",
       "🚀 Entraînement de : Gradient Boosting...\n",
-      "Résultat pour Gradient Boosting : 0.7026\n",
+      "Résultat pour Gradient Boosting : 0.6659\n",
       "\n",
-      "🏆 Best model: Random Forest with accuracy 0.7622\n"
+      "🏆 Best model: Random Forest with accuracy 0.7884\n"
      ]
     }
    ],
@@ -182,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "04bf959b",
    "metadata": {},
    "outputs": [
