--- a/src/model/notebooks/model_selection.ipynb
+++ b/src/model/notebooks/model_selection.ipynb
@@ -10,19 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 155,
    "id": "fc70e4fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.metrics import classification_report, accuracy_score"
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n"
    ]
   },
   {
@@ -35,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 156,
    "id": "84e0147c",
    "metadata": {},
    "outputs": [],
@@ -43,8 +50,65 @@
     "df = pd.read_csv(r\"../../data/datasets/cleaned_train.csv\")\n",
     "\n",
     "cols = ['Annual_Income', 'Monthly_Inhand_Salary', 'Num_Bank_Accounts', 'Outstanding_Debt', 'Num_Credit_Card', 'Credit_History_Months']\n",
-    "df = df[cols + ['Credit_Score']]\n",
+    "df = df[cols + ['Credit_Score']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "91b57358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Debt_Income_Ratio'] = df['Outstanding_Debt'] / (df['Annual_Income'] + 1)\n",
+    "df['Cards_per_Account'] = df['Num_Credit_Card'] / (df['Num_Bank_Accounts'] + 1)\n",
+    "df['Credit_Age_Years'] = df['Credit_History_Months'] / 12\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "9a46ff5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Annual_Income'] = np.log1p(df['Annual_Income'])\n",
+    "df['Outstanding_Debt'] = np.log1p(df['Outstanding_Debt'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "a57fd191",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Income_Bin'] = pd.qcut(df['Annual_Income'], q=5, duplicates='drop')\n",
+    "df['Debt_Bin'] = pd.qcut(df['Outstanding_Debt'], q=5, duplicates='drop')\n",
+    "df['Credit_Age_Bin'] = pd.cut(df['Credit_History_Months'], bins=[0, 12, 36, 60, 120, 300])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "e0d904c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Income_per_Account'] = df['Annual_Income'] / (df['Num_Bank_Accounts'] + 1)\n",
+    "df['Debt_per_Card'] = df['Outstanding_Debt'] / (df['Num_Credit_Card'] + 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "9b3b35f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X = df.drop(columns=['Credit_Score'])\n",
+    "X = X.replace([np.inf, -np.inf], np.nan)\n",
+    "\n",
     "y = df['Credit_Score']"
    ]
   },
@@ -58,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 162,
    "id": "2cc09b70",
    "metadata": {},
    "outputs": [],
@@ -82,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 163,
    "id": "a2c51d94",
    "metadata": {},
    "outputs": [
@@ -90,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Colonnes numériques (6) : ['Annual_Income', 'Monthly_Inhand_Salary', 'Num_Bank_Accounts', 'Outstanding_Debt', 'Num_Credit_Card', 'Credit_History_Months']\n",
+      "Colonnes numériques (11) : ['Annual_Income', 'Monthly_Inhand_Salary', 'Num_Bank_Accounts', 'Outstanding_Debt', 'Num_Credit_Card', 'Credit_History_Months', 'Debt_Income_Ratio', 'Cards_per_Account', 'Credit_Age_Years', 'Income_per_Account', 'Debt_per_Card']\n",
       "Colonnes catégorielles (0) : []\n"
      ]
     }
@@ -102,11 +166,28 @@
     "print(f\"Colonnes numériques ({len(numeric_features)}) : {numeric_features}\")\n",
     "print(f\"Colonnes catégorielles ({len(categorical_features)}) : {categorical_features}\")\n",
     "\n",
+    "numeric_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='median')),\n",
+    "    ('scaler', StandardScaler())\n",
+    "])\n",
+    "\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        ('num', StandardScaler(), numeric_features),\n",
+    "        ('num', numeric_transformer, numeric_features),\n",
     "        ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_features)\n",
-    "    ])"
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "ae092732",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "le = LabelEncoder()\n",
+    "y_encoded = le.fit_transform(y)"
    ]
   },
   {
@@ -119,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "fd2c9cba",
    "metadata": {},
    "outputs": [
@@ -129,25 +210,33 @@
      "text": [
       "\n",
       "🚀 Entraînement de : Régression Logistique...\n",
-      "Résultat pour Régression Logistique : 0.5354\n",
+      "Résultat pour Régression Logistique : 0.5937\n",
       "\n",
       "🚀 Entraînement de : Random Forest...\n",
-      "Résultat pour Random Forest : 0.7884\n",
+      "Résultat pour Random Forest : 0.7960\n",
       "\n",
       "🚀 Entraînement de : Gradient Boosting...\n",
-      "Résultat pour Gradient Boosting : 0.6659\n",
+      "Résultat pour Gradient Boosting : 0.6666\n",
       "\n",
-      "🏆 Best model: Random Forest with accuracy 0.7884\n"
+      "🚀 Entraînement de : xgboost...\n",
+      "Résultat pour xgboost : 0.7146\n",
+      "\n",
+      "🚀 Entraînement de : Extra Trees...\n",
+      "Résultat pour Extra Trees : 0.7504\n",
+      "\n",
+      "🏆 Best model: Random Forest with accuracy 0.7960\n"
      ]
     }
    ],
    "source": [
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y_encoded, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
     "models = {\n",
     "    \"Régression Logistique\": LogisticRegression(max_iter=1000),\n",
     "    \"Random Forest\": RandomForestClassifier(n_estimators=100, random_state=42),\n",
-    "    \"Gradient Boosting\": GradientBoostingClassifier(n_estimators=100, random_state=42)\n",
+    "    \"Gradient Boosting\": GradientBoostingClassifier(n_estimators=100, random_state=42),\n",
+    "    \"xgboost\": XGBClassifier(n_estimators=800,max_depth=6,learning_rate=0.03,subsample=0.85,colsample_bytree=0.85,min_child_weight=6,gamma=0.3,reg_alpha=0.2,reg_lambda=1.5,objective=\"multi:softprob\", num_class=3,eval_metric=\"mlogloss\",random_state=42),\n",
+    "    \"Extra Trees\" : ExtraTreesClassifier(n_estimators=800,max_depth=20,min_samples_leaf=2,min_samples_split=5,max_features=\"sqrt\",random_state=42,n_jobs=-1)\n",
     "}\n",
     "\n",
     "trained_pipelines = {} \n",
@@ -185,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 166,
    "id": "04bf959b",
    "metadata": {},
    "outputs": [
@@ -209,7 +298,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.5)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
